# app/user_types.go
@@ -481,129 +481,6 @@ func (ut *JobPayload) Validate() (err error) {
 	return
 }
 
-// operationPayload user type.
-type operationPayload struct {
-	// Callback task path
-	FinalizeTaskPath *string `form:"finalize_task_path,omitempty" json:"finalize_task_path,omitempty" yaml:"finalize_task_path,omitempty" xml:"finalize_task_path,omitempty"`
-	// Name
-	Name *string `form:"name,omitempty" json:"name,omitempty" yaml:"name,omitempty" xml:"name,omitempty"`
-	// Operation Type
-	OperationType *string `form:"operation_type,omitempty" json:"operation_type,omitempty" yaml:"operation_type,omitempty" xml:"operation_type,omitempty"`
-	// Owner id
-	OwnerID *string `form:"owner_id,omitempty" json:"owner_id,omitempty" yaml:"owner_id,omitempty" xml:"owner_id,omitempty"`
-	// Owner type name
-	OwnerType *string `form:"owner_type,omitempty" json:"owner_type,omitempty" yaml:"owner_type,omitempty" xml:"owner_type,omitempty"`
-	// GCP Project ID
-	ProjectID *string `form:"project_id,omitempty" json:"project_id,omitempty" yaml:"project_id,omitempty" xml:"project_id,omitempty"`
-	// Service name
-	Service *string `form:"service,omitempty" json:"service,omitempty" yaml:"service,omitempty" xml:"service,omitempty"`
-	// Operation Status
-	Status *string `form:"status,omitempty" json:"status,omitempty" yaml:"status,omitempty" xml:"status,omitempty"`
-	// GCP zone
-	Zone *string `form:"zone,omitempty" json:"zone,omitempty" yaml:"zone,omitempty" xml:"zone,omitempty"`
-}
-
-// Validate validates the operationPayload type instance.
-func (ut *operationPayload) Validate() (err error) {
-	if ut.Name == nil {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`request`, "name"))
-	}
-	if ut.Service == nil {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`request`, "service"))
-	}
-	if ut.OperationType == nil {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`request`, "operation_type"))
-	}
-	if ut.Status == nil {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`request`, "status"))
-	}
-	if ut.ProjectID == nil {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`request`, "project_id"))
-	}
-	if ut.Zone == nil {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`request`, "zone"))
-	}
-	return
-}
-
-// Publicize creates OperationPayload from operationPayload
-func (ut *operationPayload) Publicize() *OperationPayload {
-	var pub OperationPayload
-	if ut.FinalizeTaskPath != nil {
-		pub.FinalizeTaskPath = ut.FinalizeTaskPath
-	}
-	if ut.Name != nil {
-		pub.Name = *ut.Name
-	}
-	if ut.OperationType != nil {
-		pub.OperationType = *ut.OperationType
-	}
-	if ut.OwnerID != nil {
-		pub.OwnerID = ut.OwnerID
-	}
-	if ut.OwnerType != nil {
-		pub.OwnerType = ut.OwnerType
-	}
-	if ut.ProjectID != nil {
-		pub.ProjectID = *ut.ProjectID
-	}
-	if ut.Service != nil {
-		pub.Service = *ut.Service
-	}
-	if ut.Status != nil {
-		pub.Status = *ut.Status
-	}
-	if ut.Zone != nil {
-		pub.Zone = *ut.Zone
-	}
-	return &pub
-}
-
-// OperationPayload user type.
-type OperationPayload struct {
-	// Callback task path
-	FinalizeTaskPath *string `form:"finalize_task_path,omitempty" json:"finalize_task_path,omitempty" yaml:"finalize_task_path,omitempty" xml:"finalize_task_path,omitempty"`
-	// Name
-	Name string `form:"name" json:"name" yaml:"name" xml:"name"`
-	// Operation Type
-	OperationType string `form:"operation_type" json:"operation_type" yaml:"operation_type" xml:"operation_type"`
-	// Owner id
-	OwnerID *string `form:"owner_id,omitempty" json:"owner_id,omitempty" yaml:"owner_id,omitempty" xml:"owner_id,omitempty"`
-	// Owner type name
-	OwnerType *string `form:"owner_type,omitempty" json:"owner_type,omitempty" yaml:"owner_type,omitempty" xml:"owner_type,omitempty"`
-	// GCP Project ID
-	ProjectID string `form:"project_id" json:"project_id" yaml:"project_id" xml:"project_id"`
-	// Service name
-	Service string `form:"service" json:"service" yaml:"service" xml:"service"`
-	// Operation Status
-	Status string `form:"status" json:"status" yaml:"status" xml:"status"`
-	// GCP zone
-	Zone string `form:"zone" json:"zone" yaml:"zone" xml:"zone"`
-}
-
-// Validate validates the OperationPayload type instance.
-func (ut *OperationPayload) Validate() (err error) {
-	if ut.Name == "" {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`type`, "name"))
-	}
-	if ut.Service == "" {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`type`, "service"))
-	}
-	if ut.OperationType == "" {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`type`, "operation_type"))
-	}
-	if ut.Status == "" {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`type`, "status"))
-	}
-	if ut.ProjectID == "" {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`type`, "project_id"))
-	}
-	if ut.Zone == "" {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`type`, "zone"))
-	}
-	return
-}
-
 // pipelineBasePayload user type.
 type pipelineBasePayload struct {
 	// Container configuration
